--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 		<ol>
 		<li><a href="3.daļa 2011 uzdevumi.docx" target="_blank"> 3.daļas uzdevumi</a></li>
 		<li><a href="autobusi(ar pārbaudi)(exam informātikā)2011.xls" target="_blank"> autobusi.xlsx</a></li>
+		<li><a href="3.daļa 2011  uzdevumi.docx" target="_blank"> drīzumā būs pieejams </a></li>
 		</ol>
 		
       </div>
@@ -54,6 +55,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <img src="2012.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>2012.gads</b></p>
+	      <ol>
+	      <li><a href="3.daļa  2011 uzdevumi.docx" target="_blank"> drīzumā būs pieejams </a></li>
+	      <li><a href="3.daļa  2011 uzdevumi.docx" target="_blank"> drīzumā būs pieejams</a></li>
+	      <li><a href="3.daļa  2011 uzdevumi.docx" target="_blank"> drīzumā būs pieejams</a></li>
+	      </ol>
     </div>
   </div>
   
@@ -63,11 +69,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <p>Zināšanu pārbaudes sistēma ir izveidota, lai dotu iespēju
 skolēniem pārbaudīt savas zināšanas informātikā. <br/>
  Dotā sistēma atvieglo informātikas eksāmena darbu labošanu skolotājiem.<br/>
-Sistēmā būs pieejami visu gadu informātikas eksāmena uzdevumi.</p>
+Sistēmā drīzumā būs pieejami visu gadu informātikas eksāmena uzdevumi.</p>
 <h5><b>Kā strādā sistēma?<b><h5>
      <ol>
-      <li>Izvēlies eksēmena gadu</li>
-       <li>Lejuplēdē nepieciešamos failu</li>
+      <li>Izvēlies eksāmena gadu</li>
+       <li>Lejuplādē nepieciešamos failu</li>
 	   <li>Izpildi norādītos uzdevumus</li>
        <li>Pēc darba izpildes nospied pogu “pārbaudīt” </li>
 	   <li>Programma parāda lietotāja pieļauto kļūdu skaitu un <br/> piedāvā detalizētu informāciju par kļūdām</li>
